force-app/main/default/objects/Indeed_com_AppForm__c/Indeed_com_AppForm__c.object-meta.xml
<CustomObject>
    <description>Persons will fill the data in these forms.</description>
    <label>Indeed.com AppForm</label>
    <nameField>
        <label>Indeed.com AppForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indeed.com AppForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>