force-app/main/default/objects/Indeed_com_AppForm__c/fields/About_Previous_Job__c.field-meta.xml
<CustomField>
    <fullName>About_Previous_Job__c</fullName>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please describe about the previous job you worked for.</inlineHelpText>
    <label>About Previous Job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>