force-app/main/default/objects/Indeed_com_AppForm__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Indeed.com AppForms</relationshipLabel>
    <relationshipName>Indeed_com_AppForms</relationshipName>
    <type>Lookup</type>
</CustomField>