force-app/main/default/objects/Indeed_com_AppForm__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <label>Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>