force-app/main/default/objects/Indeed_com_AppForm__c/fields/Birthday_in_this_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_in_this_Month__c</fullName>
    <formula>IF( MONTH( Date_of_Birth__c ) = MONTH( TODAY() ) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Birthday in this Month</label>
    <type>Text</type>
</CustomField>