force-app/main/default/objects/Indeed_com_AppForm__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Reference mail
or
Task Number</description>
    <inlineHelpText>Choose the city you are living in.</inlineHelpText>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>