force-app/main/default/objects/Indeed_com_AppForm__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Reference Mail:
or
Task Number:</description>
    <inlineHelpText>Choose the country you are living in.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>