force-app/main/default/objects/Indeed_com_AppForm__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF(Bill__c = 0 , 0, IF(Bill__c  &gt; 1000, 100, 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>