force-app/main/default/objects/Indeed_com_AppForm__c/fields/Eighteen_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Eighteen_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Eighteen Digit Id</label>
    <type>Text</type>
</CustomField>