force-app/main/default/objects/Indeed_com_AppForm__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <description>english</description>
    <formula>IF(INCLUDES( Languages_Known__c , &apos;English&apos; ), 1, NULL)</formula>
    <inlineHelpText>english</inlineHelpText>
    <label>English</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>