force-app/main/default/objects/Indeed_com_AppForm__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please enter the number of years you worked for.
Example: 3.10</inlineHelpText>
    <label>Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>