force-app/main/default/objects/Indeed_com_AppForm__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&apos;First Name&apos;</defaultValue>
    <description>Reference: Mail dated Jan 1st 2020 from Client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please your first name.
Example: John</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>