force-app/main/default/objects/Indeed_com_AppForm__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <defaultValue>&apos;Select your Gender&apos;</defaultValue>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please select your Gender.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>