force-app/main/default/objects/Indeed_com_AppForm__c/fields/Hindi__c.field-meta.xml
<CustomField>
    <fullName>Hindi__c</fullName>
    <formula>IF(INCLUDES( Languages_Known__c , &apos;Hindi&apos;), 1, NULL)</formula>
    <label>Hindi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>