force-app/main/default/objects/Indeed_com_AppForm__c/fields/Is_City_Length_more_than_15__c.field-meta.xml
<CustomField>
    <fullName>Is_City_Length_more_than_15__c</fullName>
    <formula>LEN(TEXT(City__c ))  &gt;= 15</formula>
    <label>Is City Length more than 15</label>
    <type>Checkbox</type>
</CustomField>