force-app/main/default/objects/Indeed_com_AppForm__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please enter your job status.
Example: Not working.</inlineHelpText>
    <label>Job Status</label>
    <type>TextArea</type>
</CustomField>