force-app/main/default/objects/Indeed_com_AppForm__c/fields/Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_Known__c</fullName>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please choose the languages which you know. You can select more than one Language.</inlineHelpText>
    <label>Languages Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>French</fullName>
                <isActive>false</isActive>
                <label>French</label>
            </value>
            <value>
                <fullName>Hindi</fullName>
                <isActive>false</isActive>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>Kannada</fullName>
                <isActive>false</isActive>
                <label>Kannada</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
                <isActive>false</isActive>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>Tamil</fullName>
                <isActive>false</isActive>
                <label>Tamil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>