force-app/main/default/objects/Indeed_com_AppForm__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <defaultValue>&apos;Last Name&apos;</defaultValue>
    <description>Reference: Mail dated Jan1st 2020 from client Larey.
or 
Task Number: 24243</description>
    <inlineHelpText>Please enter your Last Name.
Example: Steve</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>