force-app/main/default/objects/Indeed_com_AppForm__c/fields/Married__c.field-meta.xml
<CustomField>
    <fullName>Married__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reference: Mail dated Jan 1st 2020 from client Larey.
or 
Task number: 24243</description>
    <inlineHelpText>Please select married or unmarried.</inlineHelpText>
    <label>Married</label>
    <type>Checkbox</type>
</CustomField>