force-app/main/default/objects/Indeed_com_AppForm__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>18</length>
    <type>Text</type>
</CustomField>