force-app/main/default/objects/Indeed_com_AppForm__c/fields/Outlook_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Name__c</fullName>
    <formula>CASE(  Text(Gender__c) ,
        &apos;Male&apos;, if(  ISBLANK(TEXT(Martial_Status__c)), &apos; &apos;,&apos;Mr.&apos;), 
        &apos;Female&apos;,  if(  ISBLANK(TEXT(Martial_Status__c)),
                     &apos; &apos;, 
                     CASE(TEXT( Martial_Status__c ), &apos;Married&apos;, &apos;Mrs.&apos;,&apos;Single&apos;, &apos;Ms.&apos;,&apos;Ms.&apos;)) ,
        &apos; &apos;
     )
&amp;
Last_Name__c
&amp;
&apos;, &apos;
&amp;
First_Name__c</formula>
    <label>Outlook Name</label>
    <type>Text</type>
</CustomField>