force-app/main/default/objects/Indeed_com_AppForm__c/fields/Provide_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Provide_Certificates__c</fullName>
    <label>Documents to submit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Married__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marriage Certificate</fullName>
            </value>
            <value>
                <fullName>Date of Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Passport Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>