force-app/main/default/objects/Indeed_com_AppForm__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reason1</fullName>
            </value>
            <value>
                <fullName>Reason2</fullName>
            </value>
            <value>
                <fullName>Reason3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>