force-app/main/default/objects/Indeed_com_AppForm__c/fields/Salary_Expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expected__c</fullName>
    <description>Reference: Mail dated 01/01/2020 from client Larey.
or
Task Number: 24243</description>
    <inlineHelpText>Please enter the salary you are expecting from the company.
Example; 1500000</inlineHelpText>
    <label>Salary Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>