force-app/main/default/objects/Indeed_com_AppForm__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Reference Mail:
or
Task Number:</description>
    <inlineHelpText>Please select the skills you have from the given list.</inlineHelpText>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skills</valueSetName>
    </valueSet>
</CustomField>