force-app/main/default/objects/Indeed_com_AppForm__c/fields/Test_Required__c.field-meta.xml
<CustomField>
    <fullName>Test_Required__c</fullName>
    <label>Test Required</label>
    <length>18</length>
    <type>Text</type>
</CustomField>