force-app/main/default/objects/Indeed_com_AppForm__c/fields/User2__c.field-meta.xml
<CustomField>
    <fullName>User2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Indeed_com_AppForms1</relationshipName>
    <type>Lookup</type>
</CustomField>