force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/VR_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Bank_Account_Number__c) &lt;&gt; 15</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Enter proper Bank Account Number. Bank Account Number should be 15 characters</errorMessage>
</ValidationRule>