force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/VR_Multiple_Fields_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Multiple_Fields_Empty</fullName>
    <active>false</active>
    <errorConditionFormula>OR
(
ISBLANK(TEXT(Country__c)),
ISBLANK(TEXT(City__c)),
ISBLANK(TEXT(Preferred_Country__c))
)</errorConditionFormula>
    <errorMessage>Country or City or Preferred Country should not blank.</errorMessage>
</ValidationRule>