force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/vr_on_exp.validationRule-meta.xml
<ValidationRule>
    <fullName>vr_on_exp</fullName>
    <active>false</active>
    <errorConditionFormula>( Experience__c  &lt; 5 )  ||  (Experience__c  &gt;15)</errorConditionFormula>
    <errorDisplayField>Experience__c</errorDisplayField>
    <errorMessage>Exp should be in between 5 and 15.</errorMessage>
</ValidationRule>