force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/VR_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Phone_Number</fullName>
    <active>false</active>
    <errorConditionFormula>LEFT(Phone_Number__c, 1) &lt;&gt; &apos;+&apos;</errorConditionFormula>
    <errorMessage>Phone Number should start with &apos;+&apos;.</errorMessage>
</ValidationRule>