force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/VR_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Picklist</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Reason__c, &quot;Other&quot; ),
ISBLANK( Other__c )
)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>It should not be blank if you select &apos;Reasons&apos; field as others.</errorMessage>
</ValidationRule>