force-app/main/default/objects/Indeed_com_AppForm__c/validationRules/VR_Price_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Price_Change</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Salary_Expected__c )</errorConditionFormula>
    <errorDisplayField>Salary_Expected__c</errorDisplayField>
    <errorMessage>It is one-time editable field..</errorMessage>
</ValidationRule>